--- a/package.json
+++ b/package.json
@@ -42,6 +42,34 @@
     "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
+    "babel-cli": "6.18.0",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "6.18.0",
+    "css-loader": "^0.23.1",
+    "eslint": "3.13.0",
+    "eslint-config-airbnb": "14.0.0",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "6.9.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "^0.8.5",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
+    "precss": "^1.4.0",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "3.2.3",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4",
     "axios": "0.15.3",
     "body-parser": "1.15.2",
     "express": "^4.13.4",
